--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "quarto-exporter",
-	"name": "Quarto Exporter",
+	"id": "MarkDowntoQuarto",
+	"name": "MarkDowntoQuarto",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "Converts the active Markdown file to a Quarto (.qmd) file.",
